2013-01-26  Charlie Zender  <zender@uci.edu>

	* ncks only copies global metadata once

	* ncks prints multiple root record dimensions

	* nco_prn_var_dfn() handles multiple record dimensions

	* Add tm2_tm3 to allow regression tests on variables with multiple record dimensions

	* Fix 4.2.4 bug that broke --mk_rec_dmn

	* Smarten nco_cpy_var_dfn*() to allow multiple netCDF4 record dimensions

	* Add --mk_rec_dmn regression tests

	* New API: pass rec_dmn_nm to nco_cpy_var_dfn*() only when user-specified

2013-01-25  Charlie Zender  <zender@uci.edu>

	* Remove ENABLE_NETCDF4 from nco_cpy_var_val_lmt()

2013-01-23  Charlie Zender  <zender@uci.edu>

	* Prepare to implement --mk_rec_dmn functionality in nco_xtr_dfn()

2013-01-21  Charlie Zender  <zender@uci.edu>

	* NCO 4.2.4 release procedure:
 	Changes since nco-4_2_3: ncks & ncecat new xtr API, ncra bugfix, ncrename
	cd ~/nco;cvs tag -d nco-4_2_4;cvs tag -d nco-4_2_4-1
	cd ~/nco;cvs commit -m "Preparing nco-4.2.4 release"
	cvs tag -c nco-4_2_4;cvs tag -c nco-4_2_4-1

	* Harmonize printing of netCDF3 and netCDF4 metadata

	* Re-add --mk_rec_dim as synonym for preferred --mk_rec_dmn

2013-01-20  Charlie Zender  <zender@uci.edu>

	* Only print fully-qualified name of variables in non-root groups
	This preserves traditional printing format for netCDF3 files

2013-01-19  Charlie Zender  <zender@uci.edu>

	* Pass CPY_GRP_METADATA _and_ CPY_VAR_METADATA to nco_xtr_dfn()

	* Systematize extraction list function names

	* Remove cruft from nco_grp_utl.[ch]

	* Implement new extraction list API in ncecat

	* Restructure nco_xtr_dfn() to isolate variable from group definitions
	Group metadata now handled by separate block executed iff PRN_VAR_METADATA
	This give user ability to turn-off all metadata copying
	Group metadata now copied for empty ancestors of all extracted variables
	Previously group metadata were only written to groups containing variables
	New algorithm: 1. Ensures group metadata written only once.