@@ -1,4 +1,4 @@
-/* $Header: /data/zender/nco_20150216/nco/src/nco/nco_var_utl.c,v 1.214 2013-01-27 00:30:01 zender Exp $ */
+/* $Header: /data/zender/nco_20150216/nco/src/nco/nco_var_utl.c,v 1.215 2013-01-27 02:03:45 zender Exp $ */
 
 /* Purpose: Variable utilities */
 
@@ -95,7 +95,10 @@ nco_cpy_var_dfn /* [fnc] Copy variable metadata from input to output file */
     } /* end loop over dmn_idx */
   } /* !rec_dmn_nm */
 
-  /* Get dimension sizes and names */
+  /* File format needed for decision tree and enabling netCDF4 features */
+  rcd=nco_inq_format(out_id,&fl_fmt);
+
+  /* Get input and set output dimension sizes and names */
   for(dmn_idx=0;dmn_idx<nbr_dim;dmn_idx++){
     char dmn_nm[NC_MAX_NAME];
     long dmn_sz;
@@ -164,19 +167,18 @@ nco_cpy_var_dfn /* [fnc] Copy variable metadata from input to output file */
       nco_exit(EXIT_FAILURE);
     } /* end if err */
 
-  } /* end loop over dim */
+  } /* end loop over dimensions */
 
   /* Define variable in output file */
   (void)nco_def_var(out_id,var_nm,var_typ,nbr_dim,dmn_out_id,&var_out_id);
 
   /* Duplicate netCDF4 settings when possible */
-  rcd=nco_inq_format(out_id,&fl_fmt);
   if(fl_fmt == NC_FORMAT_NETCDF4 || fl_fmt == NC_FORMAT_NETCDF4_CLASSIC){
     /* Deflation */
     if(nbr_dim > 0){
-      int shuffle; /* [flg] Turn on shuffle filter */
       int deflate; /* [flg] Turn on deflate filter */
       int dfl_lvl_in; /* [enm] Deflate level [0..9] */
+      int shuffle; /* [flg] Turn on shuffle filter */
       rcd=nco_inq_var_deflate(in_id,var_in_id,&shuffle,&deflate,&dfl_lvl_in);
       /* Copy original deflation settings */
       if(deflate || shuffle) (void)nco_def_var_deflate(out_id,var_out_id,shuffle,deflate,dfl_lvl_in);
@@ -206,15 +208,25 @@ nco_cpy_var_dfn_lmt /* Copy variable metadata from input to output file */
  const int dfl_lvl) /* I [enm] Deflate level [0..9] */
 {
   /* Purpose: Copy variable metadata from input netCDF file to output netCDF file
-  This routine truncates dimensions in variable definition in output file according to user-specified limits.
-  Routine copies_variable by variable, old-style, used only by ncks */
+     Routine is based on nco_cpy_dfn_lmt()
+     Routine truncates dimensions in variable definition in output file according to user-specified limits
+     Routine copies_variable by variable, old-style, used only by ncks
+     20130126: Behavior until today required rec_dmn_nm even if not changing it
+     As of today, rec_dmn_nm passed only when user-specified
+     Otherwise, re-use old record dimension name */
+
+  const char fnc_nm[]="nco_cpy_var_dfn_lmt()"; /* [sng] Function name */
 
   int *dmn_in_id;
   int *dmn_out_id;
 
+  int dmn_ids_rec[NC_MAX_DIMS]; /* [ID] Record dimension IDs array */
+
+  int dmn_idx;
   int fl_fmt; /* [enm] Output file format */
-  int idx;
   int nbr_dim;
+  int nbr_rec; /* [nbr] Number of unlimited dimensions */
+  int rec_idx;
   int rcd=NC_NOERR; /* [rcd] Return code */
   int rec_dmn_out_id=NCO_REC_DMN_UNDEFINED;
   int var_in_id;
@@ -222,34 +234,23 @@ nco_cpy_var_dfn_lmt /* Copy variable metadata from input to output file */
 
   nc_type var_typ;
 
+  nco_bool CRR_DMN_IS_REC_IN_INPUT; /* [flg] Current dimension of variable is record dimension of variable in input file/group */
+  nco_bool DFN_CRR_DMN_AS_REC_IN_OUTPUT; /* [flg] Define current dimension as record dimension in output file */
+
+  /* Recall:
+     1. Dimensions must be defined before variables
+     2. Variables must be defined before attributes */
+
   /* Is requested variable already in output file? */
   rcd=nco_inq_varid_flg(out_id,var_nm,&var_out_id);
   if(rcd == NC_NOERR) return var_out_id;
+
   /* Is requested variable in input file? */
   rcd=nco_inq_varid_flg(in_id,var_nm,&var_in_id);
-  if(rcd != NC_NOERR) (void)fprintf(stdout,"%s: ERROR unable to find variable \"%s\"\n",prg_nm_get(),var_nm);
-
-  /* Is requested record dimension in input file? */
-  if(rec_dmn_nm){
-    /* Following lines works on libnetcdf 4.2.1+ but not on 4.1.1-
-    rcd=nco_inq_dimid_flg(in_id,rec_dmn_nm,(int *)NULL); */
-    int rec_dmn_id_dummy;
-    rcd=nco_inq_dimid_flg(in_id,rec_dmn_nm,&rec_dmn_id_dummy);
-    if(rcd != NC_NOERR){
-      (void)fprintf(stdout,"%s: ERROR User requested that dimension \"%s\" be record dimension in output file. However, this dimension is not visible in input file by variable %s. Perhaps it is mis-spelled? HINT: Verify \"%s\" is used in a variable that will appear in output file, or eliminate --mk_rec_dmn switch from command-line.\n",prg_nm_get(),var_nm,rec_dmn_nm,rec_dmn_nm);
-     nco_exit(EXIT_FAILURE);
-    } /* endif */
-  } /* endif */
+  if(rcd != NC_NOERR) (void)fprintf(stdout,"%s: %s reports ERROR unable to find variable \"%s\"\n",prg_nm_get(),fnc_nm,var_nm);
 
   /* Get type of variable and number of dimensions */
   (void)nco_inq_var(in_id,var_in_id,(char *)NULL,&var_typ,&nbr_dim,(int *)NULL,(int *)NULL);
-
-  /* Get unlimited dimension in output */
-  (void)nco_inq(out_id,(int *)NULL,(int *)NULL,(int *)NULL,&rec_dmn_out_id);
-
-  /* Recall:
-     1. Dimensions must be defined before variable
-     2. Variable must be defined before attributes */
 
   /* Allocate space to hold dimension IDs */
   dmn_in_id=(int *)nco_malloc(nbr_dim*sizeof(int));
@@ -258,104 +259,124 @@ nco_cpy_var_dfn_lmt /* Copy variable metadata from input to output file */
   /* Get dimension IDs */
   (void)nco_inq_vardimid(in_id,var_in_id,dmn_in_id);
 
-  /* Get netCDF file format */
-  (void)nco_inq_format(in_id,&fl_fmt);
+  /* Get unlimited dimension information from input file/group */
+  rcd=nco_inq_unlimdims(in_id,&nbr_rec,dmn_ids_rec);
 
-  /* Get dimension sizes and names */
-  for(idx=0;idx<nbr_dim;idx++){
+  /* Get unlimited dimension information from output file/group */
+  (void)nco_inq(out_id,(int *)NULL,(int *)NULL,(int *)NULL,&rec_dmn_out_id);
+
+  /* Is requested record dimension in input file? */
+  if(rec_dmn_nm){
+    /* NB: Following lines works on libnetcdf 4.2.1+ but not on 4.1.1- (broken in netCDF library)
+       rcd=nco_inq_dimid_flg(in_id,rec_dmn_nm,(int *)NULL); */
+    int rec_dmn_id_dummy;
+    rcd=nco_inq_dimid_flg(in_id,rec_dmn_nm,&rec_dmn_id_dummy);
+    if(rcd != NC_NOERR){
+      (void)fprintf(stdout,"%s: ERROR User requested that dimension \"%s\" be record dimension in output file. However, this dimension is not visible in input file by variable %s. HINT: Perhaps it is mis-spelled? HINT: Verify \"%s\" is used in a variable that will appear in output file, or eliminate --mk_rec_dmn switch from command-line.\n",prg_nm_get(),rec_dmn_nm,var_nm,rec_dmn_nm);
+    nco_exit(EXIT_FAILURE);
+    } /* endif */
+
+    /* Does variable contain requested record dimension? */
+    for(dmn_idx=0;dmn_idx<nbr_dim;dmn_idx++){
+      if(dmn_in_id[dmn_idx] == rec_dmn_id_dummy){
+	if(dbg_lvl_get() >= nco_dbg_crr) (void)fprintf(stderr,"%s: INFO %s reports variable %s contains user-specified record dimension %s\n",prg_nm_get(),fnc_nm,var_nm,rec_dmn_nm);
+	break;
+      } /* endif */
+    } /* end loop over dmn_idx */
+  } /* !rec_dmn_nm */
+
+  /* File format needed for decision tree and enabling netCDF4 features */
+  rcd=nco_inq_format(out_id,&fl_fmt);
+
+  /* Get input and set output dimension sizes and names */
+  for(dmn_idx=0;dmn_idx<nbr_dim;dmn_idx++){
     char dmn_nm[NC_MAX_NAME];
     long dmn_sz;
-    int rcd_lcl; 
-    int dmn_id;
+    int rcd_lcl; /* [rcd] Return code */
 
-    (void)nco_inq_dim(in_id,dmn_in_id[idx],dmn_nm,&dmn_sz);
+    (void)nco_inq_dim(in_id,dmn_in_id[dmn_idx],dmn_nm,&dmn_sz);
 
-    if(fl_fmt == NC_FORMAT_NETCDF4){
-      char *grp_nm_fll;        /* [sng] Fully qualified group name */
+    /* Has dimension been defined in output file? */
+    rcd_lcl=nco_inq_dimid_flg(out_id,dmn_nm,dmn_out_id+dmn_idx);
 
-      char grp_nm[NC_MAX_NAME];/* [sng] Relative group name */
-      
-      size_t grp_nm_lng;
-      
-      /* Allocate space for and obtain full name of current group */
-      (void)nco_inq_grpname(in_id,grp_nm);
-      (void)nco_inq_grpname_len(in_id,&grp_nm_lng);
-      grp_nm_fll=(char *)nco_malloc((grp_nm_lng+1L)*sizeof(char));
-      (void)nco_inq_grpname_full(in_id,&grp_nm_lng,grp_nm_fll);
-      
-      /* Has dimension been defined in output file? */
-      rcd_lcl=nco_inq_dimid_flg(out_id,dmn_nm,&dmn_id);
-      
-      /* If dimension has not been defined yet, copy it */
-      if(rcd_lcl != NC_NOERR){
-        if(!rec_dmn_nm || strcmp(dmn_nm,rec_dmn_nm)){
-          int lmt_all_idx;
-	  
-          /* Does dimension have user-specified limits? */
-          for(lmt_all_idx=0;lmt_all_idx<lmt_all_lst_nbr;lmt_all_idx++){
-            if(strcmp(dmn_nm,lmt_all_lst[lmt_all_idx]->lmt_dmn[0]->nm) == 0 && nco_fnd_dmn(in_id,dmn_nm)){
-              dmn_sz=lmt_all_lst[lmt_all_idx]->dmn_cnt;
-              break;
-            } /* end if */
-          } /* end loop over lmt_all_idx */
-	  
-          (void)nco_def_dim(out_id,dmn_nm,dmn_sz,&dmn_id);
-        }else{
-          (void)nco_def_dim(out_id,dmn_nm,NC_UNLIMITED,&dmn_id);
-          rec_dmn_out_id=dmn_id;
-        } /* end else record dimension */
-      } /* end if NC_NOERR */
-      
-      dmn_out_id[idx]=dmn_id;
-      
-      /* Free full group name */
-      grp_nm_fll=(char *)nco_free(grp_nm_fll);
-      
-    }else{ /* !NC_FORMAT_NETCDF4 */
-      
-      /* Has dimension been defined in output file? */
-      rcd_lcl=nco_inq_dimid_flg(out_id,dmn_nm,dmn_out_id+idx);
-      
-      /* If dimension has not been defined, copy it */
-      if(rcd_lcl != NC_NOERR){
-        if(!rec_dmn_nm || strcmp(dmn_nm,rec_dmn_nm)){
-          int lmt_all_idx;
-	  
-          /* Does dimension have user-specified limits? */
-          for(lmt_all_idx=0;lmt_all_idx<lmt_all_lst_nbr;lmt_all_idx++){
-            if(lmt_all_lst[lmt_all_idx]->lmt_dmn[0]->id == dmn_in_id[idx]){
-              dmn_sz=lmt_all_lst[lmt_all_idx]->dmn_cnt;
-              break;
-            } /* end if */
-          } /* end loop over lmt_all_idx */
+    /* Define dimension in output file if necessary */
+    if(rcd_lcl != NC_NOERR){
 
-          (void)nco_def_dim(out_id,dmn_nm,dmn_sz,dmn_out_id+idx);
-        }else{
-          (void)nco_def_dim(out_id,dmn_nm,NC_UNLIMITED,dmn_out_id+idx);
-          rec_dmn_out_id=dmn_out_id[idx];
-        } /* end else record dimension */
-      } /* end if NC_NOERR */
-    } /* !NC_FORMAT_NETCDF4 */
+      /* Here begins a complex tree to decide a simple, binary output:
+	 Will current input dimension be defined as an output record dimension or as a fixed dimension?
+	 Decision tree outputs flag DFN_CRR_CMN_AS_REC_IN_OUTPUT that controls subsequent netCDF actions
+	 Otherwise would repeat netCDF action code too many times */
 
-    /* Die if record dimension is not first dimension */
-    if(idx>0 && dmn_out_id[idx]==rec_dmn_out_id){
-      (void)fprintf(stdout,"%s: ERROR User defined the output record dimension to be \"%s\". Yet in the input variable \"%s\" the record dimension is dimension number %d. NCO (and the netCDF3 API) only supports the record dimension as the first (i.e., least rapidly varying) dimension. Consider using ncpdq to permute the location of the record dimension in the output file.\n",prg_nm_get(),rec_dmn_nm,var_nm,idx+1);  
+      /* Is dimension unlimited in input file? */
+      for(rec_idx=0;rec_idx<nbr_rec;rec_idx++)
+	if(dmn_in_id[dmn_idx] == dmn_ids_rec[rec_idx]) break;
+      if(rec_idx < nbr_rec) CRR_DMN_IS_REC_IN_INPUT=True; else CRR_DMN_IS_REC_IN_INPUT=False;
+
+      /* If user requested (with --mk_rec_dmn) that a specific dimension be output record dimension ... */
+      if(rec_dmn_nm){
+	/* ... and this dimension is that dimension, i.e., the user-specified dimension ... */
+	if(!strcmp(dmn_nm,rec_dmn_nm)){
+	  /* ... then honor user's request and define it as a record dimension ... */
+	  if(dbg_lvl_get() >= nco_dbg_std) (void)fprintf(stderr,"%s: INFO %s is defining dimension %s as record dimension in output file per user request\n",prg_nm_get(),fnc_nm,rec_dmn_nm);
+	  DFN_CRR_DMN_AS_REC_IN_OUTPUT=True;
+	}else{ /* strcmp() */
+	  /* ... otherwise things get complicated ... 
+	     This dimension can be a record dimension only if it would not conflict with the requested 
+	     record dimension being defined a record dimension, and that depends on file format. Uggh.
+	     1. netCDF3 API allows only one record-dimension so conflicts are possible
+	     2. netCDF4 API permits any number of unlimited dimensions so conflicts are impossible */
+	  if(fl_fmt == NC_FORMAT_NETCDF4){
+	    /* ... no conflicts possible so define dimension in output same as in input ... */
+	    if(CRR_DMN_IS_REC_IN_INPUT) DFN_CRR_DMN_AS_REC_IN_OUTPUT=True; else DFN_CRR_DMN_AS_REC_IN_OUTPUT=False;
+	  }else{ /* !netCDF4 */
+	    /* ... output file adheres to netCDF3 API so there can be only one record dimension.
+	       In other words, define all other dimensions as fixed, non-record dimensions, even
+	       if they are a record dimension in the input file ... */
+	    if(CRR_DMN_IS_REC_IN_INPUT) (void)fprintf(stderr,"%s: INFO %s is defining dimension %s as fixed (non-record) in output file even though it is a record dimension in the input file. This is necessary to satisfy user request that %s be the record dimension in the output file which adheres to the netCDF3 API that permits only one record dimension.\n",prg_nm_get(),fnc_nm,dmn_nm,rec_dmn_nm);
+	    DFN_CRR_DMN_AS_REC_IN_OUTPUT=False;
+	  } /* !netCDF4 */
+	} /* strcmp() */
+      }else{ /* !rec_dmn_nm */
+	/* ... no user-specified record dimension so define dimension in output same as in input ... */
+	if(CRR_DMN_IS_REC_IN_INPUT) DFN_CRR_DMN_AS_REC_IN_OUTPUT=True; else DFN_CRR_DMN_AS_REC_IN_OUTPUT=False;
+      } /* !rec_dmn_nm */ 
+
+      /* At long last ... */
+      if(DFN_CRR_DMN_AS_REC_IN_OUTPUT){
+	(void)nco_def_dim(out_id,dmn_nm,NC_UNLIMITED,dmn_out_id+dmn_idx);
+	rec_dmn_out_id=dmn_out_id[dmn_idx];
+      }else{ /* !DFN_CRR_DMN_AS_REC_IN_OUTPUT */
+	/* Does dimension have user-specified limits? */
+	for(int lmt_all_idx=0;lmt_all_idx<lmt_all_lst_nbr;lmt_all_idx++){
+	  /* fxm: Why lmt_dmn[0] in following line? */
+	  if(!strcmp(dmn_nm,lmt_all_lst[lmt_all_idx]->lmt_dmn[0]->nm) && nco_fnd_dmn(in_id,dmn_nm)){
+	    dmn_sz=lmt_all_lst[lmt_all_idx]->dmn_cnt;
+	    break;
+	  } /* end if */
+	} /* end loop over lmt_all_idx */
+	(void)nco_def_dim(out_id,dmn_nm,dmn_sz,dmn_out_id+dmn_idx);
+      } /* !DFN_CRR_DMN_AS_REC_IN_OUTPUT */
+
+    } /* end if dimension is not yet defined */
+
+    /* Die informatively if record dimension is not first dimension */
+    if(dmn_idx > 0 && dmn_out_id[dmn_idx] == rec_dmn_out_id && fl_fmt != NC_FORMAT_NETCDF4){
+      (void)fprintf(stdout,"%s: ERROR User defined the output record dimension to be \"%s\". Yet in the variable \"%s\" this is dimension number %d. The output file adheres to the netCDF3 API which only supports the record dimension as the first (i.e., least rapidly varying) dimension. Consider using ncpdq to permute the location of the record dimension in the output file.\n",prg_nm_get(),rec_dmn_nm,var_nm,dmn_idx+1);  
       nco_exit(EXIT_FAILURE);
-    } /* end if */
+    } /* end if err */
 
-  } /* end loop over dim */
+  } /* end loop over dimensions */
 
   /* Define variable in output file */
   (void)nco_def_var(out_id,var_nm,var_typ,nbr_dim,dmn_out_id,&var_out_id);
 
   /* Duplicate netCDF4 settings when possible */
-  rcd=nco_inq_format(out_id,&fl_fmt);
   if(fl_fmt == NC_FORMAT_NETCDF4 || fl_fmt == NC_FORMAT_NETCDF4_CLASSIC){
     /* Deflation */
     if(nbr_dim > 0){
-      int shuffle; /* [flg] Turn on shuffle filter */
       int deflate; /* [flg] Turn on deflate filter */
       int dfl_lvl_in; /* [enm] Deflate level [0..9] */
+      int shuffle; /* [flg] Turn on shuffle filter */
       rcd=nco_inq_var_deflate(in_id,var_in_id,&shuffle,&deflate,&dfl_lvl_in);
       /* Copy original deflation settings */
       if(deflate || shuffle) (void)nco_def_var_deflate(out_id,var_out_id,shuffle,deflate,dfl_lvl_in);
